ubsan: shenandoahSimpleBitMap.inline.hpp:68:23: runtime error: signed integer overflow: -9223372036854775808 - 1 cannot be represented in type 'long int'

XMLWordPrintable

    • gc
    • b18
    • x86
    • linux

        The following error can be seen when running hs :tier1 tests with ubsan configured (--enable-ubsan) .
        Example tests showing it:
        compiler/gcbarriers/UnsafeIntrinsicsTest_Shenandoah.jtr
        gc/shenandoah/compiler/BarrierInInfiniteLoop.jtr

        /jdk/src/hotspot/share/gc/shenandoah/shenandoahSimpleBitMap.inline.hpp:68:23: runtime error: signed integer overflow: -9223372036854775808 - 1 cannot be represented in type 'long int'
            #0 0x7f3392f27b50 in ShenandoahSimpleBitMap::find_last_set_bit(long, long) const /jdk/src/hotspot/share/gc/shenandoah/shenandoahSimpleBitMap.inline.hpp:68
            #1 0x7f3392f27b50 in ShenandoahRegionPartitions::find_index_of_previous_available_region(ShenandoahFreeSetPartitionId, long) const /jdk/src/hotspot/share/gc/shenandoah/shenandoahFreeSet.cpp:388
            #2 0x7f3392f27b50 in ShenandoahRegionPartitions::shrink_interval_if_range_modifies_either_boundary(ShenandoahFreeSetPartitionId, long, long) /jdk/src/hotspot/share/gc/shenandoah/shenandoahFreeSet.cpp:213
            #3 0x7f3392f27b50 in ShenandoahRegionPartitions::shrink_interval_if_boundary_modified(ShenandoahFreeSetPartitionId, long) /jdk/src/hotspot/share/gc/shenandoah/shenandoahFreeSet.cpp:229
            #4 0x7f3392f27b50 in ShenandoahRegionPartitions::move_from_partition_to_partition(long, ShenandoahFreeSetPartitionId, ShenandoahFreeSetPartitionId, unsigned long) /jdk/src/hotspot/share/gc/shenandoah/shenandoahFreeSet.cpp:323
            #5 0x7f3392f3b7a4 in ShenandoahFreeSet::reserve_regions(unsigned long) /jdk/src/hotspot/share/gc/shenandoah/shenandoahFreeSet.cpp:1118
            #6 0x7f3392f3f829 in ShenandoahFreeSet::finish_rebuild(unsigned long) /jdk/src/hotspot/share/gc/shenandoah/shenandoahFreeSet.cpp:1080
            #7 0x7f3392f3f829 in ShenandoahFreeSet::rebuild() /jdk/src/hotspot/share/gc/shenandoah/shenandoahFreeSet.cpp:1088
            #8 0x7f3392f8d8b7 in ShenandoahHeap::initialize() /jdk/src/hotspot/share/gc/shenandoah/shenandoahHeap.cpp:379
            #9 0x7f33935bc78c in universe_init() /jdk/src/hotspot/share/memory/universe.cpp:859
            #10 0x7f3391893691 in init_globals() /jdk/src/hotspot/share/runtime/init.cpp:128
            #11 0x7f339352a740 in Threads::create_vm(JavaVMInitArgs*, bool*) /jdk/src/hotspot/share/runtime/threads.cpp:553
            #12 0x7f3391c2d497 in JNI_CreateJavaVM_inner /jdk/src/hotspot/share/prims/jni.cpp:3581
            #13 0x7f3391c2d497 in JNI_CreateJavaVM /jdk/src/hotspot/share/prims/jni.cpp:3672
            #14 0x7f3398f460e5 in InitializeJVM /jdk/src/java.base/share/native/libjli/java.c:1550
            #15 0x7f3398f460e5 in JavaMain /jdk/src/java.base/share/native/libjli/java.c:491
            #16 0x7f3398f4f748 in ThreadJavaMain /jdk/src/java.base/unix/native/libjli/java_md.c:642
            #17 0x7f3398efe6e9 in start_thread (/lib64/libpthread.so.0+0xa6e9) (BuildId: 2f8d3c2d0f4d7888c2598d2ff6356537f5708a73)
            #18 0x7f339851550e in clone (/lib64/libc.so.6+0x11850e) (BuildId: f732026552f6adff988b338e92d466bc81a01c37)

              Assignee:
              William Kemper
              Reporter:
              Matthias Baesken
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: