8332697: fix ubsan:shenandoahSimpleBitMap.inline.hpp runtime integer overflow